--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
   </head>
   <body>
     <img src="img/top-image.png"> 
-    <article>
+    
       <h1>Awesome<br>Company</h1>
-
+      <article>
+      <div class="row">
+        <div class="column">
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam suscipit, nisl ac lobortis condimentum, urna ante viverra dolor, in consequat nisi erat sed nulla. Sed ac lorem diam. Nunc ullamcorper mauris quis ipsum tristique, a maximus sem mollis. Maecenas sit amet massa at nibh rutrum euismod. Nunc semper justo turpis, ac consequat eros iaculis ac. Donec ultrices lacus vel consequat mattis. Integer lacinia id ligula sit amet varius.
+            <br>
+            <br>
+            Maecenas vitae sapien commodo, venenatis ante nec, scelerisque massa. Phasellus eget magna ultricies, euismod urna sit amet, convallis diam. Nam eu venenatis risus. Pellentesque ut erat euismod, porta turpis vitae, tempus mi. Mauris venenatis velit id vestibulum tempus. Proin ac leo nec sem semper rhoncus. Quisque vestibulum quis metus id suscipit. Vestibulum ultricies est vulputate tristique fermentum. Integer lacinia augue sed ligula viverra eleifend. In neque sapien, varius ac dictum ut, malesuada id urna. Aenean consectetur neque nulla, vitae gravida nibh sagittis quis. Cras ullamcorper lectus eget luctus sagittis. Phasellus in ipsum erat. Sed interdum tellus in sapien convallis aliquam. Fusce orci dolor, sodales id justo nec, convallis pharetra nisl. Morbi et mi ut ligula placerat maximus.
+            <br>
+            <br>
+            Quisque tristique massa at neque imperdiet, eu aliquam nulla ultrices. Aliquam pellentesque lacus aliquam suscipit bibendum. Suspendisse eu est maximus, facilisis felis non, pellentesque velit. Praesent vel commodo velit. Sed eu posuere quam. Mauris non metus viverra, suscipit ligula ut, mattis metus. Nunc feugiat felis id leo porttitor, quis iaculis sem fringilla. Aenean lobortis feugiat leo, nec pretium purus egestas vitae. Vestibulum et magna at nulla eleifend sagittis.
+        </div>
+        <div class="column">
+            <br>
+            Cras vitae nulla sed mauris posuere tincidunt. Morbi vehicula augue ac arcu condimentum, id viverra nisi suscipit. Morbi at egestas elit. Duis id ante vel orci porta aliquet. Suspendisse hendrerit vulputate ipsum, eu ullamcorper diam egestas vestibulum. Quisque porta orci et dolor aliquet pellentesque. Phasellus varius maximus sem vitae hendrerit. Donec vitae tristique justo, at placerat mi.
+            <br>
+            <br>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis convallis interdum ipsum, eu laoreet eros auctor at. Etiam nec mauris enim. Sed vehicula mauris eget vehicula euismod. Sed scelerisque a neque sit amet consectetur. Nam sed dolor nulla. In ullamcorper, sapien vel auctor gravida, sapien erat scelerisque magna, sit amet dignissim neque dui id massa. Morbi ut arcu ac sapien tempor tempus. Phasellus metus dui, pellentesque euismod tellus eget, tempus auctor eros.
+            <br>
+            <br>
+            Ut condimentum, magna ac egestas eleifend, arcu tellus ullamcorper tortor, ac vestibulum nisi ex sit amet urna. Integer sed urna gravida, faucibus lorem vel, viverra orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris mattis accumsan mi, id tempus ex hendrerit id. Vestibulum quis ligula nec erat vestibulum convallis varius non ligula. Cras dictum vulputate mattis. Sed ut tellus vel justo fermentum lobortis ac id magna. Phasellus bibendum at justo eu volutpat. Aenean congue molestie velit, at ultrices nulla auctor quis. Morbi dictum efficitur nunc quis eleifend. Proin ullamcorper eleifend massa id vestibulum. Suspendisse ornare tempor augue in tristique. Etiam euismod eu urna ut dictum.  
+        </div>
+      </div>
       <address>
         <p>The Awesome Company</p>
-        
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam suscipit, nisl ac lobortis condimentum, urna ante viverra dolor, in consequat nisi erat sed nulla. Sed ac lorem diam. Nunc ullamcorper mauris quis ipsum tristique, a maximus sem mollis. Maecenas sit amet massa at nibh rutrum euismod. Nunc semper justo turpis, ac consequat eros iaculis ac. Donec ultrices lacus vel consequat mattis. Integer lacinia id ligula sit amet varius.
-
-Maecenas vitae sapien commodo, venenatis ante nec, scelerisque massa. Phasellus eget magna ultricies, euismod urna sit amet, convallis diam. Nam eu venenatis risus. Pellentesque ut erat euismod, porta turpis vitae, tempus mi. Mauris venenatis velit id vestibulum tempus. Proin ac leo nec sem semper rhoncus. Quisque vestibulum quis metus id suscipit. Vestibulum ultricies est vulputate tristique fermentum. Integer lacinia augue sed ligula viverra eleifend. In neque sapien, varius ac dictum ut, malesuada id urna. Aenean consectetur neque nulla, vitae gravida nibh sagittis quis. Cras ullamcorper lectus eget luctus sagittis. Phasellus in ipsum erat. Sed interdum tellus in sapien convallis aliquam. Fusce orci dolor, sodales id justo nec, convallis pharetra nisl. Morbi et mi ut ligula placerat maximus.
-
-Quisque tristique massa at neque imperdiet, eu aliquam nulla ultrices. Aliquam pellentesque lacus aliquam suscipit bibendum. Suspendisse eu est maximus, facilisis felis non, pellentesque velit. Praesent vel commodo velit. Sed eu posuere quam. Mauris non metus viverra, suscipit ligula ut, mattis metus. Nunc feugiat felis id leo porttitor, quis iaculis sem fringilla. Aenean lobortis feugiat leo, nec pretium purus egestas vitae. Vestibulum et magna at nulla eleifend sagittis.
-
-Cras vitae nulla sed mauris posuere tincidunt. Morbi vehicula augue ac arcu condimentum, id viverra nisi suscipit. Morbi at egestas elit. Duis id ante vel orci porta aliquet. Suspendisse hendrerit vulputate ipsum, eu ullamcorper diam egestas vestibulum. Quisque porta orci et dolor aliquet pellentesque. Phasellus varius maximus sem vitae hendrerit. Donec vitae tristique justo, at placerat mi.
-
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis convallis interdum ipsum, eu laoreet eros auctor at. Etiam nec mauris enim. Sed vehicula mauris eget vehicula euismod. Sed scelerisque a neque sit amet consectetur. Nam sed dolor nulla. In ullamcorper, sapien vel auctor gravida, sapien erat scelerisque magna, sit amet dignissim neque dui id massa. Morbi ut arcu ac sapien tempor tempus. Phasellus metus dui, pellentesque euismod tellus eget, tempus auctor eros.
-
-Ut condimentum, magna ac egestas eleifend, arcu tellus ullamcorper tortor, ac vestibulum nisi ex sit amet urna. Integer sed urna gravida, faucibus lorem vel, viverra orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris mattis accumsan mi, id tempus ex hendrerit id. Vestibulum quis ligula nec erat vestibulum convallis varius non ligula. Cras dictum vulputate mattis. Sed ut tellus vel justo fermentum lobortis ac id magna. Phasellus bibendum at justo eu volutpat. Aenean congue molestie velit, at ultrices nulla auctor quis. Morbi dictum efficitur nunc quis eleifend. Proin ullamcorper eleifend massa id vestibulum. Suspendisse ornare tempor augue in tristique. Etiam euismod eu urna ut dictum.  
         <p>102-112 Frail Bend Bridge<br>
         The Dwindlings<br>
         Little Hornet<br>
