added radio checkbox and button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             Ut condimentum, magna ac egestas eleifend, arcu tellus ullamcorper tortor, ac vestibulum nisi ex sit amet urna. Integer sed urna gravida, faucibus lorem vel, viverra orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris mattis accumsan mi, id tempus ex hendrerit id. Vestibulum quis ligula nec erat vestibulum convallis varius non ligula. Cras dictum vulputate mattis. Sed ut tellus vel justo fermentum lobortis ac id magna. Phasellus bibendum at justo eu volutpat. Aenean congue molestie velit, at ultrices nulla auctor quis. Morbi dictum efficitur nunc quis eleifend. Proin ullamcorper eleifend massa id vestibulum. Suspendisse ornare tempor augue in tristique. Etiam euismod eu urna ut dictum.  
         </div>
       </div>
+
+      <form>
+        Pick one: 
+        <br>
+        <input type="radio" name="items" value="Kyle">Kyle
+        <br>
+        <input type="radio" name="items" value="Cartman">Cartman
+        <br>
+        <input type="radio" name="items" value="Stan">Stan
+        <br>
+        <input type="radio" name="items" value="Kenny">Kenny
+        <br>
+        <input type="button" value="Submit">
+      </form>
       <address>
         <p>The Awesome Company</p>
         <p>102-112 Frail Bend Bridge<br>
