--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <br>
         <input type="radio" name="items" value="Kenny">Kenny
         <br>
-        <input type="button" value="Submit">
+        <button onclick="helloWorld()" value="Submit">Submit</button>
       </form>
       <address>
         <p>The Awesome Company</p>
